<resources>
    <string name="app_name">Иди работать!</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="button_shifts_text">Смены</string>
    <string name="button_workers_text">Работники</string>
    <string name="button_exit_text">Выйти из личного кабинета</string>
    <string name="button_report_text">Сформировать отчет</string>
    <string name="text_view_password_text">Пароль: </string>
    <string name="text_view_login_text">Логин: </string>
    <string name="button_enter_text">Войти</string>
    <string name="button_register_text">Зарегистрироваться</string>
    <string name="button_create_text">Создать</string>
    <string name="button_save_text">Сохранить</string>
    <string name="button_machines_text">Станки</string>
    <string name="text_view_machine_type">Тип станка: </string>
    <string name="text_view_shift_date">Дата смены: </string>
    <string name="button_cancel_text">Отмена</string>
    <string name="text_view_shift_type">Тип смены: </string>
    <string name="button_update_text">Изменить</string>
    <string name="button_delete_text">Удалить</string>
    <string name="button_back_text">Назад</string>
    <string name="text_view_worker_name">Имя работника: </string>
    <string name="text_view_salary">Зарплата: </string>
    <string name="button_shift_begin_time">Начало смены</string>
    <string name="button_shift_end_time">Конец смены</string>
    <string name="text_view_shift_time">Время смены: </string>
    <string name="button_add_worker">Добавить работника</string>
    <string name="button_delete_worker">Удалить работника</string>
    <string name="text_view_shift">Смена: </string>
    <string name="text_view_worker">Работник: </string>
    <string name="text_view_hours">Количество часов: </string>
    <string name="button_date_from">Установить начальную дату</string>
    <string name="button_date_to">Установить конечную дату</string>
    <string name="text_view_offline">Оффлайн</string>
</resources>